# PDCursesMod

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  appveyor.yml  curses.h  curspriv.h  exp-base.def  libobjs.mif  panel.h  term.h  version.mif  watcom.mif
.github/workflows/: analyzers.yml  github_actions_build.yml
cmake/: README.md  build_dependencies.cmake  build_dependents.cmake  build_external.cmake  build_options.cmake  common_config.cmake  dll_version.cmake  gen_config_header.cmake  get_version.cmake  git_label_version.cmake  project_common.cmake  resource.in.cmake  version.in.cmake  vs2015_build.cmd  watcom_open_dos16_toolchain.cmake  watcom_open_dos32_toolchain.cmake  watcom_open_os2v2_toolchain.cmake
cmake/sdl2_ttf/: CMakeLists.txt
common/: acs_defs.h  approx.c  beep.c  blink.c  config_curses.c  dos_key.h  dosutil.c  libobjs.mif  mouse.c  pdcclip.c  pdccolor.c  pdccolor.h  pdccolor.txt  psf.c  psf_wide.h  watcom.mif  winclip.c  xlates.h
demos/: CMakeLists.txt  UTF-8-demo.txt  calendar.c  curses.priv.h  dates.txt  firework.c  init_col.c  mbrot.c  nctests.mif  ncurses_cfg.h  newtest.c  ozdemo.c  picsview.c  ptest.c  rain.c  snprintf.c  speed.c  test_pan.c  testcurs.c  tui.c  tui.h  tuidemo.c  version.c  widetest.c  worm.c  xmas.c
docs/: HISTORY.md  IMPLEMNT.md  MANUAL.md  README.md  USERS.md
dos/: CMakeLists.txt  Makefile  Makefile.dmc  Makefile.wcc  README.md  pdcdisp.c  pdcdos.h  pdckbd.c  pdcscrn.c  pdcsetsc.c  pdcutil.c
dosvga/: CMakeLists.txt  Makefile  Makefile.dmc  Makefile.wcc  cp437.h  pdcdisp.c  pdcdos.h  pdckbd.c  pdcscrn.c  pdcsetsc.c  pdcutil.c
fb/: Makefile  README.md  cursor.c  drm.c  lat2_vga.h  pdcclip.c  pdcdisp.c  pdcfb.h  pdcgetsc.c  pdckbd.c  pdcmouse.c  pdcscrn.c  pdcsetsc.c  pdcutil.c  psf.c  psf.h  psf_wide.h  uni_info.h
gl/: CMakeLists.txt  Makefile  Makefile.vc  README.md  glfuncs.h  pdcclip.c  pdcdisp.c  pdcgetsc.c  pdcgl.h  pdckbd.c  pdcscrn.c  pdcsdl.h  pdcsetsc.c  pdcutil.c
gl/glad/include/glad/: gl.h  glad.h
gl/glad/src/: gl.c  glad.c
ncurses/: CMakeLists.txt  Makefile  makefile
os2/: Makefile  Makefile.bcc  Makefile.wcc  iccos2.mak  pdcclip.c  pdcdisp.c  pdckbd.c  pdcos2.h  pdcscrn.c  pdcsetsc.c  pdcutil.c
os2gui/: .gitignore  CMakeLists.txt  Makefile  Makefile.wcc  README.md  pdcclip.c  pdcdisp.c  pdckbd.c  pdcscrn.c  pdcsetsc.c  pdcutil.c  pdcwin.h  table.py  unitable.h
pdcurses/: addch.c  addchstr.c  addstr.c  attr.c  beep.c  bkgd.c  border.c  clear.c  color.c  compat.c  debug.c  delch.c  deleteln.c  getch.c  getstr.c  getyx.c  inch.c  inchstr.c  initscr.c  inopts.c  insch.c  insstr.c  instr.c  kernel.c  keyname.c  mouse.c  move.c  outopts.c  overlay.c  pad.c  pairs.txt  panel.c  printw.c  refresh.c  scanw.c  scr_dump.c  scroll.c  slk.c  termattr.c  terminfo.c  (+3 more)
plan9/: mkfile  mkfile_demo  pdcclip.c  pdcdisp.c  pdcscrn.c  pdcutil.c
psffonts/: 10x20.psf  18x18.psf  4x6.psf  6x12.psf  8x13.psf  9x15.psf  9x18.psf  README  README.md  bmp2psf2.c  cour11x17.psf  cour20x29.psf  default.psf  lc12x20.psf  makefile  medieval2.psf  vga11x19.psf
psffonts/fntcol16/: 2_hebrew-14.psf  README  antique-14.psf  apeaus-08.psf  apeaus-14.psf  apeaus-16.psf  apls-08.psf  arabdrft-14.psf  arabic-14.psf  arabkufi-14.psf  arabnaf-14.psf  arbnaskh-14.psf  armenian-08.psf  armenian-16.psf  art-16.psf  ascii-14.psf  backward-14.psf  bdeclo-14.psf  bhexall-14.psf  bhexbox-14.psf  bhexhi-14.psf  bhexlo-14.psf  bigserif-14.psf  bigserif-16.psf  bigsf-14.psf  binaryed-14.psf  blcksnsf-10.psf  block-14.psf  bold-14.psf  boxround-14.psf  boxround-16.psf  broadway-14.psf  bthin-14.psf  bway2-14.psf  cafe-10.psf  cafe-12.psf  cntdown-14.psf  cntdown-16.psf  computer-14.psf  copyleft.txt  (+238 more)
psffonts/mappings/: CP851.TXT  ReadMe.txt
sdl1/: Makefile  README.md  pdcdisp.c  pdckbd.c  pdcscrn.c  pdcsdl.h  pdcsetsc.c  pdcutil.c  sdltest.c
sdl2/: CMakeLists.txt  Makefile  Makefile.vc  README.md  pdcclip.c  pdcdisp.c  pdckbd.c  pdcscrn.c  pdcsdl.h  pdcsetsc.c  pdcutil.c  sdltest.c
sdl2ren/: CMakeLists.txt  Makefile.vc  README.md  pdcdisp.c  pdckbd.c  pdcscrn.c  pdcsdl.h  pdcsetsc.c
sdl3/: CMakeLists.txt  Makefile.vc  README.md  pdcclip.c  pdcdisp.c  pdckbd.c  pdcscrn.c  pdcsdl.h  pdcsetsc.c  pdcutil.c  sdltest.c  versions.mif
tests/: README.md  brk_test.c  del_test.c  focus.c  ins_del.c  keytest.c  naptest.c  opaque.c  restart.c  ripoff.c  show_col.c  show_uni.c  vt0.c
vt/: CMakeLists.txt  Makefile  Makefile.bcc  Makefile.dmc  Makefile.vc  Makefile.wcc  README.md  getch2.c  pdcclip.c  pdcdisp.c  pdckbd.c  pdcscrn.c  pdcsetsc.c  pdcutil.c  pdcvt.h
win32/: CMakeLists.txt  mingwin32.mak  pdcscrn.c  pdcsetsc.c  pdcwin.h  resource.in  version.rc
win32a/: .gitignore  CMakeLists.txt  pdcdisp.c  pdcscrn.c  pdcsetsc.c  pdcwin.h
wincon/: CMakeLists.txt  Makefile  Makefile.bcc  Makefile.dmc  Makefile.mng  Makefile.vc  Makefile.wcc  README.md  pdcdisp.c  pdckbd.c  pdcscrn.c  pdcutil.c  pdcwin.h
wingui/: CMakeLists.txt  Makefile  Makefile.bcc  Makefile.dmc  Makefile.mng  Makefile.vc  Makefile.wcc  README.md  pdcclip.c  pdcdisp.c  pdckbd.c  pdcscrn.c  pdcsetsc.c  pdcutil.c  pdcwin.h
x11/: CMakeLists.txt  Makefile.in  README.md  aclocal.m4  config.h.in  config_cmake.h.in  configure  configure.ac  pdcclip.c  pdcdisp.c  pdckbd.c  pdcscrn.c  pdcsetsc.c  pdcx11.h  sb.c  scrlbox.c
x11new/: CMakeLists.txt  Makefile  README.md  pdcclip.c  pdcdisp.c  pdckbd.c  pdcscrn.c  pdcsetsc.c  pdcutil.c  pdcx11.h
