CMAKE_MINIMUM_REQUIRED (VERSION 2.8.4)

FIND_PACKAGE(Git REQUIRED)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake)

IF(NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE "Release" CACHE STRING "Choose the type of build, options are: DEBUG, RELEASE, or MINSIZEREL." FORCE)
    MESSAGE("No build type specified, defaulting to Release.")
ENDIF()

OPTION(PDC_DLL_BUILD "Build pdcurses.dll" OFF)
OPTION(PDC_UTF8 "Force to UTF8" OFF)
OPTION(PDC_WIDE "Unicode" OFF)
OPTION(PDCDEBUG "Debug" OFF)
OPTION(PDC_CHTYPE_32 "CHTYPE_32" OFF)
OPTION(PDC_CHTYPE_16 "CHTYPE_16" OFF)
OPTION(PDC_SDL2_BUILD "Build SDL2 Project" ON)
OPTION(PDC_SDL2_DEPS_BUILD "Build SDL2 and dependencies" ON)

INCLUDE(git_label_version)

MESSAGE(STATUS "PDC_DLL_BUILD = ${PDC_DLL_BUILD}")
MESSAGE(STATUS "PDC_UTF8 = ${PDC_UTF8}")
MESSAGE(STATUS "PDC_WIDE = ${PDC_WIDE}")
MESSAGE(STATUS "PDCDEBUG = ${PDCDEBUG}")
MESSAGE(STATUS "PDC_CHTYPE_32 = ${PDC_CHTYPE_32}")
MESSAGE(STATUS "PDC_CHTYPE_16 = ${PDC_CHTYPE_16}")
MESSAGE(STATUS "Build SDL2 Project = ${PDC_SDL2_BUILD}")
MESSAGE(STATUS "Build SDL2 and dependencies = ${PDC_SDL2_DEPS_BUILD}")

IF(POLICY CMP0048)
    CMAKE_POLICY(SET CMP0048 NEW)
ENDIF()

SET(CMAKE_DEBUG_POSTFIX "d" CACHE STRING "Name suffix for debug builds")
MARK_AS_ADVANCED(CMAKE_IMPORT_LIBRARY_SUFFIX CMAKE_DEBUG_POSTFIX)

INCLUDE(build_dependencies)

PROJECT (pdcurses VERSION "${PROJECT_VERSION}" LANGUAGES C)


INCLUDE(gen_config_header)

IF(CYGWIN)
    MESSAGE(STATUS "Windows Kit UM lib path = ${WINDOWS_KIT_LIBRARY_DIR}")
    LINK_DIRECTORIES(${WINDOWS_KIT_LIBRARY_DIR})
ENDIF()

IF(WIN32)
    ADD_SUBDIRECTORY(win32)
    ADD_SUBDIRECTORY(win32a)
ENDIF()

IF(PDC_SDL2_BUILD)
    ADD_SUBDIRECTORY(sdl2)
ENDIF()

ADD_CUSTOM_TARGET(uninstall "${CMAKE_COMMAND}" -P "${CMAKE_SOURCE_DIR}/cmake/make_uninstall.cmake")

SET(CPACK_COMPONENTS_ALL applications)
