CMAKE_MINIMUM_REQUIRED (VERSION 2.8.6)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake)

IF(POLICY CMP0048)
    CMAKE_POLICY(SET CMP0048 NEW)
ENDIF()

PROJECT(sdl2 VERSION "${PROJECT_VERSION}" LANGUAGES C)
MESSAGE(STATUS "${PROJECT_NAME} version: ${PROJECT_VERSION}")

MESSAGE(STATUS "SDL2_LIBRARIES = ${SDL2_LIBRARIES}")
MESSAGE(STATUS "SDL2_INCLUDE_DIR = ${SDL2_INCLUDE_DIR}")
MESSAGE(STATUS "SDL2_LIBRARY_DIR = ${SDL2_LIBRARY_DIR}")
IF(PDC_WIDE)
    MESSAGE(STATUS "SDL2_TTF_LIBRARIES = ${SDL2_TTF_LIBRARIES}")
    MESSAGE(STATUS "SDL2_TTF_INCLUDE_DIR = ${SDL2_TTF_INCLUDE_DIR}")
    MESSAGE(STATUS "SDL2_TTF_LIBRARY_DIR = ${SDL2_TTF_LIBRARY_DIR}")
ENDIF()

INCLUDE_DIRECTORIES (
    ${SDL2_INCLUDE_DIR} 
    ${SDL2_TTF_INCLUDE_DIR})

LINK_DIRECTORIES(
    ${SDL2_LIBRARY_DIR}
    ${SDL2_TTF_LIBRARY_DIR})

INCLUDE(project_common)
    
define_sdl2_exe(../demos version)
define_sdl2_exe(../demos firework)
define_sdl2_exe(../demos newdemo)
define_sdl2_exe(../demos newtest)
define_sdl2_exe(../demos ptest)
define_sdl2_exe(../demos rain)
define_sdl2_exe(../demos testcurs)
define_sdl2_exe(../demos worm)
define_sdl2_exe(../demos xmas)
define_sdl2_exe(./ sdltest)

IF(WIN32)
    SET_TARGET_PROPERTIES(${PROJECT_NAME}_newtest PROPERTIES LINK_FLAGS "/SUBSYSTEM:WINDOWS")
ENDIF(WIN32)

ADD_EXECUTABLE (${PROJECT_NAME}_tuidemo ${demodir}/tuidemo.c ${demodir}/tui.c)
IF(PDC_WIDE)
    TARGET_LINK_LIBRARIES (${PROJECT_NAME}_tuidemo ${PDCURSE_PROJ}
        ${SDL2_LIBRARIES} ${SDL2_TTF_LIBRARIES}
        ${WINDOWS_KIT_UM_LIBS} ${WINDOWS_KIT_UM_SDL2_LIBS})
ELSE()
    TARGET_LINK_LIBRARIES (${PROJECT_NAME}_tuidemo ${PDCURSE_PROJ}
        ${SDL2_LIBRARIES}
        ${WINDOWS_KIT_UM_LIBS} ${WINDOWS_KIT_UM_SDL2_LIBS})
ENDIF()

INSTALL (TARGETS ${PROJECT_NAME}_tuidemo RUNTIME DESTINATION ${PDCURSES_DIST}/bin/${PROJECT_NAME} COMPONENT applications)
SET_TARGET_PROPERTIES(${PROJECT_NAME}_tuidemo PROPERTIES OUTPUT_NAME "tuidemo")

IF(PDC_SDL2_DEPS_BUILD)
    IF(PDC_WIDE)
        ADD_DEPENDENCIES(${PDCURSE_PROJ} sdl2_ext sdl2_ttf_ext)
        ADD_DEPENDENCIES(sdl2_tuidemo ${PDCURSE_PROJ} sdl2_ext sdl2_ttf_ext)
    ELSE()
        ADD_DEPENDENCIES(${PDCURSE_PROJ} sdl2_ext)
        ADD_DEPENDENCIES(sdl2_tuidemo ${PDCURSE_PROJ} sdl2_ext)
    ENDIF()
ENDIF()

SET(CPACK_COMPONENTS_ALL applications)
